catalog button icon

--- a/source/index.html
+++ b/source/index.html
@@ -91,7 +91,7 @@
 
     <section class="header__navigation-wrap">
       <div class="header__navigation container">
-        <button class="header__catalog-button button">Каталог</button>
+        <button class="header__catalog-button button"><span>Каталог</span></button>
 
         <nav class="header__nav">
           <ul class="header__menu list">
@@ -117,11 +117,11 @@
             <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Контакты</span></a></li>
             <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Акции</span></a></li>
             <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Инженерный подбор</span></a></li>
-            <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Распродажа</span></a></li>
+            <li class="header__menu-item"><a href="#" class="header__menu-item-link header__menu-item-link--sale"><span>Распродажа</span></a></li>
           </ul>
         </nav>
 
-        <button class="header__selection button--white">Подбор кондиционеров</button>
+        <button class="header__selection button button--white">Подбор кондиционеров</button>
       </div>
 
     </section>
