--- a/source/index.html
+++ b/source/index.html
@@ -67,26 +67,29 @@
         <img src="img/logo.svg" alt="KlimatProf" class="header__logo-image" width="279" height="46">
       </div>
 
-      <div class="header__phone">8 (800) 333 01 70</div>
-      <div class="header__compare">
-        <a href="/compare">Сравнение</a>
-      </div>
-      <div class="header__favorite">
-        <a href="/favorite">Избранное</a>
-      </div>
-      <div class="header__personal">
-        <a href="/personal">ЛК</a>
-        <div class="header__profile">
-          <span class="header__profile-text">Личный кабинет</span>
-          <div class="header__profile-menu">
-            <a href="#" class="header__profile-login">Войти</a> или <a href="#"
-              class="header__profile-register">Зарегистрироваться</a>
+      <div class="header__icons">
+        <div class="header__phone">8 (800) 333 01 70</div>
+        <div class="header__compare">
+          <a href="/compare">Сравнение</a>
+        </div>
+        <div class="header__favorite">
+          <a href="/favorite">Избранное</a>
+        </div>
+        <div class="header__personal">
+          <a href="/personal">ЛК</a>
+          <div class="header__profile">
+            <span class="header__profile-text">Личный кабинет</span>
+            <div class="header__profile-menu">
+              <a href="#" class="header__profile-login">Войти</a> или <a href="#"
+                class="header__profile-register">Зарегистрироваться</a>
+            </div>
           </div>
         </div>
+        <div class="header__cart">
+          <a href="/cart">Корзина</a>
+        </div>
       </div>
-      <div class="header__cart">
-        <a href="/cart">Корзина</a>
-      </div>
+
     </section>
 
     <section class="header__navigation-wrap">
@@ -104,7 +107,8 @@
                 <li class="header__submenu-item"><a href="/">Новости</a></li>
               </ul>
             </li>
-            <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Условия работы</span></a></li>
+            <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Условия работы</span></a>
+            </li>
             <li class="header__menu-item">
               <span>Поддержка</span>
               <ul class="header__submenu list">
@@ -116,8 +120,10 @@
             </li>
             <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Контакты</span></a></li>
             <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Акции</span></a></li>
-            <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Инженерный подбор</span></a></li>
-            <li class="header__menu-item"><a href="#" class="header__menu-item-link header__menu-item-link--sale"><span>Распродажа</span></a></li>
+            <li class="header__menu-item"><a href="#" class="header__menu-item-link"><span>Инженерный подбор</span></a>
+            </li>
+            <li class="header__menu-item"><a href="#"
+                class="header__menu-item-link header__menu-item-link--sale"><span>Распродажа</span></a></li>
           </ul>
         </nav>
 
